--- a/src/Post.css
+++ b/src/Post.css
@@ -9,8 +9,17 @@ h2 {
 }
 
 p {
-	font-weight: 400;
+  font-weight: 400;
+  font-family: sans-serif;
+  font-size: 18px;
   padding-bottom: 10px;
 }
 
-
+ul {
+	font-weight: 400;
+  font-family: sans-serif;
+  font-size: 18px;
+  padding-bottom: 10px;
+  list-style-type: disc;
+  padding-left: 20px; /* Adjust as needed */
+}
