Change paragraph font to Literata

--- a/src/Post.css
+++ b/src/Post.css
@@ -10,14 +10,14 @@ h2 {
 
 p {
   font-weight: 400;
-  font-family: sans-serif;
+  font-family: Literata, sans-serif;
   font-size: 18px;
   padding-bottom: 10px;
 }
 
 ul {
 	font-weight: 400;
-  font-family: sans-serif;
+  font-family: Literata, sans-serif;
   font-size: 18px;
   padding-bottom: 10px;
   list-style-type: disc;
